<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:id="@+id/Rela_More"
    tools:context=".Fragments.More">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/blue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:textColor="#fff"
                android:text="@string/contactus"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/T_Title"
                />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_below="@+id/toolbar"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:id="@+id/Bc_Relative_Login">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/fullname"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColorHint="#bcbcbc"
            android:inputType="text"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:id="@+id/E_Name"
            android:textColor="#bcbcbc"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/email"
            android:layout_below="@+id/E_Name"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#bcbcbc"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:id="@+id/E_Email"
            android:textColor="#bcbcbc"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/phone"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_below="@+id/E_Email"
            android:textColorHint="#bcbcbc"
            android:inputType="number"
            android:id="@+id/E_Phone"
            android:paddingStart="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="#bcbcbc"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_85sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/message"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:gravity="start"
            android:layout_below="@+id/E_Phone"
            android:textColorHint="#bcbcbc"
            android:id="@+id/E_Message"
            android:paddingStart="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="#bcbcbc"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/E_Message"
            android:background="@drawable/bc_roundedcorners"
            android:text="@string/sendmsg"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="#fff"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/SendMesg"
            />


    </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:id="@+id/progross"
        android:visibility="gone"/>
</RelativeLayout>